src/objects/Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Invoice_Line_Item__c</fullName>
        <label>Invoice Line Item</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labour_Cost__c</fullName>
        <formula>Labour_Hours__c  * 75</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field calculates labour cost according to the no. of labour hours.</inlineHelpText>
        <label>Labour Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labour_Hours__c</fullName>
        <label>Labour Hours</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Line_Item_Total__c</fullName>
        <formula>Labour_Cost__c  +  Service_Fee__c  +  Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Fee__c</fullName>
        <label>Service Fee</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <formula>IF( Invoice_Line_Item__r.New_Client__c , 
             ( Labour_Cost__c  +  Service_Fee__c  - 50) * (4.25 / 100),
             ( Labour_Cost__c  +  Service_Fee__c ) * (4.25 / 100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>Service_Fee__c  +  Labour_Cost__c  +  Tax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>